--- a/css/index.css
+++ b/css/index.css
@@ -128,9 +128,10 @@
 }
 
 .carousel__content .next {
+    transform: translate(-100%);
     height: 70%;
     z-index: 3;
-    right: 10%;
+    left: 90%;
 }
 
 .carousel__content .previous {
@@ -140,9 +141,10 @@
 }
 
 .carousel__content .after_next {
+    transform: translate(-100%);
     height: 40%;
     z-index: 2;
-    right: 1%;
+    left: 99%;
 }
 
 .carousel__content .before_previous {
@@ -160,5 +162,5 @@
 .carousel__content .invisible_right {
     height: 0%;
     z-index: 1;
-    right: 0;
+    left: 100%;
 }
